Added GMAPS_API_KEY environment variable to deployment.yaml

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,3 +17,6 @@ spec:
         image: dockerdeepesh7/gps-chatbot:latest
         ports:
         - containerPort: 6003
+        env:
+        - name: GMAPS_API_KEY
+          value: "AIzaSyDCKAHNisordYQoxRIWv6x7sQjXUWdYr1Y"
